# Point_to_distribution_metric

./: .gitignore  CMakeLists.txt  build.sh  clear.sh  readme.md  readme.txt
Source/: CMakeLists.txt  main.cpp  pcc_distortion.cpp  pcc_distortion.hpp
dependencies/Eigen/: instructions.md
dependencies/nanoflann/: KDTreeVectorOfVectorsAdaptor.h
source/: pcc_distortion.cpp  pcc_distortion.hpp  pcc_processing.cpp  pcc_processing.hpp
test/: note.txt
